grammars/tree-sitter-edict/test/corpus/current-subset.txt
==================
bounded hello
==================

package examples.hello@1;

use lawpack hello.optics@1 digest "sha256:0000000000000000000000000000000000000000000000000000000000000000" as hello;

type HelloInput = {
  name: String<max=256>,
};

type HelloReading = {
  message: String<max=512>,
};

action sayHello(input: HelloInput)
  returns HelloReading
  profile hello.readOnly
  basis none
  budget <= hello.tinyBudget
  where input.name != ""
{
  let message = "hello, " + input.name;
  return { message };
}

---

(source_file
  (package_declaration
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version)))
  (use_declaration
    (import_kind)
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version))
    (digest_literal
      (string))
    (identifier))
  (type_declaration
    (type_identifier)
    (record_type
      (field_declaration
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier))
          (type_arguments
            (type_constraint_argument
              (number)))))))
  (type_declaration
    (type_identifier)
    (record_type
      (field_declaration
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier))
          (type_arguments
            (type_constraint_argument
              (number)))))))
  (action_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier)))))
    (type_reference
      (qualified_identifier
        (identifier)))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause)
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (expression
        (binary_expression
          (expression
            (qualified_identifier
              (identifier)
              (identifier)))
          (expression
            (string)))))
    (block
      (let_statement
        (identifier)
        (expression
          (binary_expression
            (expression
              (string))
            (expression
              (qualified_identifier
                (identifier)
                (identifier))))))
      (return_statement
        (expression
          (record_literal
            (shorthand_entry
              (identifier))))))))

==================
conditional blob
==================

package examples.blob@1;

use shape "schemas/blob.graphql" as shape;
use lawpack rope.optics@1 digest "sha256:0000000000000000000000000000000000000000000000000000000000000000" as rope;
use target echo.dpo@1 digest "sha256:1111111111111111111111111111111111111111111111111111111111111111" as echo;

action storeBlob(input: shape.StoreBlobInput)
  returns shape.MaybeBlob
  profile echo.readWrite
  basis input.initialBytes
  budget <= rope.storeBudget
{
  let initialBlob = if len(input.initialBytes) == 0 {
    yield none<shape.TextBlob>();
  } else {
    let blob = echo.ref<shape.TextBlob>(input.id);
    yield some(blob);
  };
  return { blob: initialBlob };
}

---

(source_file
  (package_declaration
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version)))
  (use_declaration
    (import_kind)
    (string)
    (identifier))
  (use_declaration
    (import_kind)
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version))
    (digest_literal
      (string))
    (identifier))
  (use_declaration
    (import_kind)
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version))
    (digest_literal
      (string))
    (identifier))
  (action_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier)))))
    (type_reference
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (expression
        (qualified_identifier
          (identifier)
          (identifier))))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (block
      (let_statement
        (identifier)
        (if_yield_expression
          (expression
            (binary_expression
              (expression
                (call_expression
                  (expression
                    (qualified_identifier
                      (identifier)))
                  (argument_list
                    (expression
                      (qualified_identifier
                        (identifier)
                        (identifier))))))
              (expression
                (number))))
          (yield_block
            (expression
              (call_expression
                (qualified_identifier
                  (identifier))
                (call_type_arguments
                  (type_reference
                    (qualified_identifier
                      (identifier)
                      (identifier))))
                (call_argument_list))))
          (yield_block
            (let_statement
              (identifier)
              (expression
                (call_expression
                  (qualified_identifier
                    (identifier)
                    (identifier))
                  (call_type_arguments
                    (type_reference
                      (qualified_identifier
                        (identifier)
                        (identifier))))
                  (call_argument_list
                    (expression
                      (qualified_identifier
                        (identifier)
                        (identifier)))))))
            (expression
              (call_expression
                (expression
                  (qualified_identifier
                    (identifier)))
                (argument_list
                  (expression
                    (qualified_identifier
                      (identifier)))))))))
      (return_statement
        (expression
          (record_literal
            (field_entry
              (identifier)
              (expression
                (qualified_identifier
                  (identifier))))))))))

==================
spaced type call
==================

package examples.spacing@1;

use shape "schemas/blob.graphql" as shape;

action check(input: shape.In)
  returns shape.Out
  profile shape.readOnly
  basis none
  budget <= shape.b
{
  let blob = none <shape.T>();
  return { blob };
}

---

(source_file
  (package_declaration
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version)))
  (use_declaration
    (import_kind)
    (string)
    (identifier))
  (action_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier)))))
    (type_reference
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause)
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (block
      (let_statement
        (identifier)
        (expression
          (call_expression
            (qualified_identifier
              (identifier))
            (call_type_arguments
              (type_reference
                (qualified_identifier
                  (identifier)
                  (identifier))))
            (call_argument_list))))
      (return_statement
        (expression
          (record_literal
            (shorthand_entry
              (identifier))))))))

==================
read greeting
==================

package examples.greeting@1;

use shape "schemas/greeting.graphql" as shape;
use lawpack greeting.optics@1 digest "sha256:0000000000000000000000000000000000000000000000000000000000000000" as greetingLaw;
use target echo.dpo@1 digest "sha256:1111111111111111111111111111111111111111111111111111111111111111" as echo;

action readGreeting(input: shape.ReadGreetingInput)
  returns shape.GreetingReading
  profile echo.readOnly
  basis input.greetingId
  budget <= greetingLaw.readGreetingBudget
{
  let greetingRef = echo.ref<shape.Greeting>(input.greetingId);
  let greeting = greetingRef.read()
    else greetingLaw.GreetingMissing;
  return { message: greeting.message };
}

---

(source_file
  (package_declaration
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version)))
  (use_declaration
    (import_kind)
    (string)
    (identifier))
  (use_declaration
    (import_kind)
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version))
    (digest_literal
      (string))
    (identifier))
  (use_declaration
    (import_kind)
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version))
    (digest_literal
      (string))
    (identifier))
  (action_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier)))))
    (type_reference
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (expression
        (qualified_identifier
          (identifier)
          (identifier))))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (block
      (let_statement
        (identifier)
        (expression
          (call_expression
            (qualified_identifier
              (identifier)
              (identifier))
            (call_type_arguments
              (type_reference
                (qualified_identifier
                  (identifier)
                  (identifier))))
            (call_argument_list
              (expression
                (qualified_identifier
                  (identifier)
                  (identifier)))))))
      (let_statement
        (identifier)
        (expression
          (call_expression
            (expression
              (qualified_identifier
                (identifier)
                (identifier)))
            (argument_list)))
        (obstruction_handler
          (obstruction_target
            (qualified_identifier
              (identifier)
              (identifier)))))
      (return_statement
        (expression
          (record_literal
            (field_entry
              (identifier)
              (expression
                (qualified_identifier
                  (identifier)
                  (identifier))))))))))

==================
uppercase bare identifiers
==================

package examples.uppercase@1;

use shape "schemas/upper.graphql" as Shape;

action Check(Input: Shape.In)
  returns Shape.Out
  profile Shape.readOnly
  basis none
  budget <= Shape.b
{
  let Result = Input.value;
  return { Result };
}

---

(source_file
  (package_declaration
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version)))
  (use_declaration
    (import_kind)
    (string)
    (identifier))
  (action_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier)))))
    (type_reference
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause)
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (block
      (let_statement
        (identifier)
        (expression
          (qualified_identifier
            (identifier)
            (identifier))))
      (return_statement
        (expression
          (record_literal
            (shorthand_entry
              (identifier))))))))

==================
color match
==================

package examples.palette@1;

use shape "schemas/palette.graphql" as shape;
use lawpack palette.optics@1 digest "sha256:0000000000000000000000000000000000000000000000000000000000000000" as palette;

enum Channel { Red, Green, Blue }

type Paint = variant {
  Solid(shape.Rgb),
  Named(shape.Name),
  Transparent,
};

action describe(input: shape.DescribeInput)
  returns shape.Description
  profile palette.readOnly
  basis input.paint
  budget <= palette.describeBudget
{
  let label = match input.paint {
    Solid(rgb) => rgb.hex,
    Named(name) => name.text,
    Transparent => input.fallback,
  };
  let recolored = shape.Paint::Solid(input.rgb);
  return { label: label, paint: recolored };
}

---

(source_file
  (package_declaration
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version)))
  (use_declaration
    (import_kind)
    (string)
    (identifier))
  (use_declaration
    (import_kind)
    (package_reference
      (qualified_identifier
        (identifier)
        (identifier))
      (version))
    (digest_literal
      (string))
    (identifier))
  (enum_declaration
    (type_identifier)
    (type_identifier)
    (type_identifier)
    (type_identifier))
  (type_declaration
    (type_identifier)
    (variant_type
      (variant_case
        (type_identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier))))
      (variant_case
        (type_identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier))))
      (variant_case
        (type_identifier))))
  (action_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_reference
          (qualified_identifier
            (identifier)
            (identifier)))))
    (type_reference
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (action_clause
      (expression
        (qualified_identifier
          (identifier)
          (identifier))))
    (action_clause
      (qualified_identifier
        (identifier)
        (identifier)))
    (block
      (let_statement
        (identifier)
        (expression
          (match_expression
            (expression
              (qualified_identifier
                (identifier)
                (identifier)))
            (match_arm
              (type_identifier)
              (identifier)
              (expression
                (qualified_identifier
                  (identifier)
                  (identifier))))
            (match_arm
              (type_identifier)
              (identifier)
              (expression
                (qualified_identifier
                  (identifier)
                  (identifier))))
            (match_arm
              (type_identifier)
              (expression
                (qualified_identifier
                  (identifier)
                  (identifier)))))))
      (let_statement
        (identifier)
        (expression
          (variant_literal
            (qualified_identifier
              (identifier)
              (identifier))
            (type_identifier)
            (argument_list
              (expression
                (qualified_identifier
                  (identifier)
                  (identifier)))))))
      (return_statement
        (expression
          (record_literal
            (field_entry
              (identifier)
              (expression
                (qualified_identifier
                  (identifier))))
            (field_entry
              (identifier)
              (expression
                (qualified_identifier
                  (identifier))))))))))
